// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App Renders the App 1`] = `null`;

exports[`Class Details Page Renders the page 1`] = `
<div
  className="details-container"
>
  <div
    className="details-col-1"
  >
    <img
      alt="expert class"
    />
  </div>
  <div
    className="details-col-2"
  >
    <div
      className="title"
    >
      <h2
        className="class-title"
      />
      <h3
        className="class-instructor"
      />
    </div>
    <div
      className="desc-table"
    >
      <h4>
        <svg
          className="bi bi-alarm"
          fill="currentColor"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8.5 5.5a.5.5 0 0 0-1 0v3.362l-1.429 2.38a.5.5 0 1 0 .858.515l1.5-2.5A.5.5 0 0 0 8.5 9V5.5z"
          />
          <path
            d="M6.5 0a.5.5 0 0 0 0 1H7v1.07a7.001 7.001 0 0 0-3.273 12.474l-.602.602a.5.5 0 0 0 .707.708l.746-.746A6.97 6.97 0 0 0 8 16a6.97 6.97 0 0 0 3.422-.892l.746.746a.5.5 0 0 0 .707-.708l-.601-.602A7.001 7.001 0 0 0 9 2.07V1h.5a.5.5 0 0 0 0-1h-3zm1.038 3.018a6.093 6.093 0 0 1 .924 0 6 6 0 1 1-.924 0zM0 3.5c0 .753.333 1.429.86 1.887A8.035 8.035 0 0 1 4.387 1.86 2.5 2.5 0 0 0 0 3.5zM13.5 1c-.753 0-1.429.333-1.887.86a8.035 8.035 0 0 1 3.527 3.527A2.5 2.5 0 0 0 13.5 1z"
          />
        </svg>
        <span>
          Hour(s)
        </span>
      </h4>
      <h4>
        <svg
          className="bi bi-megaphone"
          fill="currentColor"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M13 2.5a1.5 1.5 0 0 1 3 0v11a1.5 1.5 0 0 1-3 0v-.214c-2.162-1.241-4.49-1.843-6.912-2.083l.405 2.712A1 1 0 0 1 5.51 15.1h-.548a1 1 0 0 1-.916-.599l-1.85-3.49a68.14 68.14 0 0 0-.202-.003A2.014 2.014 0 0 1 0 9V7a2.02 2.02 0 0 1 1.992-2.013 74.663 74.663 0 0 0 2.483-.075c3.043-.154 6.148-.849 8.525-2.199V2.5zm1 0v11a.5.5 0 0 0 1 0v-11a.5.5 0 0 0-1 0zm-1 1.35c-2.344 1.205-5.209 1.842-8 2.033v4.233c.18.01.359.022.537.036 2.568.189 5.093.744 7.463 1.993V3.85zm-9 6.215v-4.13a95.09 95.09 0 0 1-1.992.052A1.02 1.02 0 0 0 1 7v2c0 .55.448 1.002 1.006 1.009A60.49 60.49 0 0 1 4 10.065zm-.657.975 1.609 3.037.01.024h.548l-.002-.014-.443-2.966a68.019 68.019 0 0 0-1.722-.082z"
          />
        </svg>
        <span />
      </h4>
    </div>
  </div>
</div>
`;

exports[`Classes Page Renders the page 1`] = `
<div
  className="classesContainer"
>
  <h2
    className="heading"
  >
    Classes
  </h2>
  <div
    className="swiper"
    id="swiper-container"
  >
    <div
      className="swiper-wrapper"
    >
      <div
        className="swiper-slide swiperSlide swiperSlideSm"
      >
        <a
          aria-current={null}
          className="swiperCard"
          href="#/class/19"
          onClick={[Function]}
        >
          <div
            className="swiperImgContainer"
          >
            <img
              alt="course instructor"
              className="swiperImg"
              src="https://res.cloudinary.com/hhh6cnm2e/image/upload/11ijaidwrn9s7s5gogab9j6wsmnz.jpeg"
            />
          </div>
          <div
            className="textContainer"
          >
            <h3
              className="title"
            >
              English Composition
            </h3>
            <p
              className="instructor"
            >
              Jeremy Campbell
            </p>
            <div
              className="socialBtns"
            >
              <span
                className="socialIconCircle"
              >
                <svg
                  className="socialIcon"
                  role="img"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <title>
                    Facebook
                  </title>
                  <path
                    d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z"
                  />
                </svg>
              </span>
              <span
                className="socialIconCircle"
              >
                <svg
                  className="socialIcon"
                  role="img"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <title>
                    Twitter
                  </title>
                  <path
                    d="M23.953 4.57a10 10 0 01-2.825.775 4.958 4.958 0 002.163-2.723c-.951.555-2.005.959-3.127 1.184a4.92 4.92 0 00-8.384 4.482C7.69 8.095 4.067 6.13 1.64 3.162a4.822 4.822 0 00-.666 2.475c0 1.71.87 3.213 2.188 4.096a4.904 4.904 0 01-2.228-.616v.06a4.923 4.923 0 003.946 4.827 4.996 4.996 0 01-2.212.085 4.936 4.936 0 004.604 3.417 9.867 9.867 0 01-6.102 2.105c-.39 0-.779-.023-1.17-.067a13.995 13.995 0 007.557 2.209c9.053 0 13.998-7.496 13.998-13.985 0-.21 0-.42-.015-.63A9.935 9.935 0 0024 4.59z"
                  />
                </svg>
              </span>
              <span
                className="socialIconCircle"
              >
                <svg
                  className="socialIcon"
                  role="img"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <title>
                    Instagram
                  </title>
                  <path
                    d="M12 0C8.74 0 8.333.015 7.053.072 5.775.132 4.905.333 4.14.63c-.789.306-1.459.717-2.126 1.384S.935 3.35.63 4.14C.333 4.905.131 5.775.072 7.053.012 8.333 0 8.74 0 12s.015 3.667.072 4.947c.06 1.277.261 2.148.558 2.913.306.788.717 1.459 1.384 2.126.667.666 1.336 1.079 2.126 1.384.766.296 1.636.499 2.913.558C8.333 23.988 8.74 24 12 24s3.667-.015 4.947-.072c1.277-.06 2.148-.262 2.913-.558.788-.306 1.459-.718 2.126-1.384.666-.667 1.079-1.335 1.384-2.126.296-.765.499-1.636.558-2.913.06-1.28.072-1.687.072-4.947s-.015-3.667-.072-4.947c-.06-1.277-.262-2.149-.558-2.913-.306-.789-.718-1.459-1.384-2.126C21.319 1.347 20.651.935 19.86.63c-.765-.297-1.636-.499-2.913-.558C15.667.012 15.26 0 12 0zm0 2.16c3.203 0 3.585.016 4.85.071 1.17.055 1.805.249 2.227.415.562.217.96.477 1.382.896.419.42.679.819.896 1.381.164.422.36 1.057.413 2.227.057 1.266.07 1.646.07 4.85s-.015 3.585-.074 4.85c-.061 1.17-.256 1.805-.421 2.227-.224.562-.479.96-.899 1.382-.419.419-.824.679-1.38.896-.42.164-1.065.36-2.235.413-1.274.057-1.649.07-4.859.07-3.211 0-3.586-.015-4.859-.074-1.171-.061-1.816-.256-2.236-.421-.569-.224-.96-.479-1.379-.899-.421-.419-.69-.824-.9-1.38-.165-.42-.359-1.065-.42-2.235-.045-1.26-.061-1.649-.061-4.844 0-3.196.016-3.586.061-4.861.061-1.17.255-1.814.42-2.234.21-.57.479-.96.9-1.381.419-.419.81-.689 1.379-.898.42-.166 1.051-.361 2.221-.421 1.275-.045 1.65-.06 4.859-.06l.045.03zm0 3.678c-3.405 0-6.162 2.76-6.162 6.162 0 3.405 2.76 6.162 6.162 6.162 3.405 0 6.162-2.76 6.162-6.162 0-3.405-2.76-6.162-6.162-6.162zM12 16c-2.21 0-4-1.79-4-4s1.79-4 4-4 4 1.79 4 4-1.79 4-4 4zm7.846-10.405c0 .795-.646 1.44-1.44 1.44-.795 0-1.44-.646-1.44-1.44 0-.794.646-1.439 1.44-1.439.793-.001 1.44.645 1.44 1.439z"
                  />
                </svg>
              </span>
            </div>
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`LandingPage Renders the page 1`] = `
<div
  className="mainContainer"
>
  <div
    className="innerContainer"
  >
    <h1
      className="pageTitle"
    >
      OUR EXPERT CLASSES
    </h1>
    <p
      className="caption"
    >
      There's Nothing Better Than Getting Better. Keep Growing With Unlimited Creative Classes. Grow Without Limits. Discover What You Can Create With Thousands of Inspiring Classes. Support of a Community. Prompts & Resources. Browse Projects. Offline viewing.
    </p>
    <div
      className="buttonsDiv"
    >
      <button
        className="button1"
        onClick={[Function]}
        type="button"
      >
        SignIn
      </button>
      <button
        className="button2"
        onClick={[Function]}
        type="button"
      >
        SignUp
      </button>
    </div>
  </div>
</div>
`;

exports[`SignIn Page Renders the page 1`] = `
<div
  className="mainContainer"
>
  <div
    className="innerContainer"
  >
    <h2
      className="title"
    >
      Sign In
    </h2>
    <form
      className="signInForm"
      onSubmit={[Function]}
    >
      <input
        className="formInput"
        name="username"
        onChange={[Function]}
        placeholder="Please enter your username"
        required={true}
        type="text"
        value=""
      />
      <input
        className="formSubmit"
        type="submit"
        value="Sign in"
      />
    </form>
  </div>
</div>
`;

exports[`SignUp Page Renders the page 1`] = `
<div
  className="mainContainer"
>
  <div
    className="innerContainer"
  >
    <h2
      className="title"
    >
      Sign Up
    </h2>
    <form
      className="signInForm"
      onSubmit={[Function]}
    >
      <input
        className="formInput"
        id="username"
        maxLength="20"
        minLength="6"
        name="username"
        onChange={[Function]}
        placeholder="Please enter your username"
        required={true}
        type="text"
        value=""
      />
      <input
        className="nameInput"
        id="name"
        maxLength="24"
        name="name"
        onChange={[Function]}
        placeholder="Please enter your name"
        required={true}
        type="text"
        value=""
      />
      <input
        className="formSubmit"
        type="submit"
        value="Sign up"
      />
    </form>
  </div>
</div>
`;
